@@ -50,6 +50,7 @@ S3method(print,settings)
 S3method(print,textmodel_wordfish_fitted)
 S3method(print,textmodel_wordscores_fitted)
 S3method(print,textmodel_wordscores_predicted)
+S3method(print,tokenizedTexts)
 S3method(quantedaformat2dtm,dfm)
 S3method(readability,character)
 S3method(readability,corpus)
@@ -128,7 +129,6 @@ export(ntoken)
 export(ntype)
 export(phrasetotoken)
 export(phrasetotoken.corpus)
-export(print.tokenizedTexts)
 export(quantedaformat2dtm)
 export(readability)
 export(removeFeatures)
