@@ -3,7 +3,6 @@
 \name{tokenize}
 \alias{clean}
 \alias{is.tokenizedTexts}
-\alias{print.tokenizedTexts}
 \alias{tokenise}
 \alias{tokenize}
 \alias{tokenize.character}
@@ -14,15 +13,13 @@ tokenize(x, ...)
 
 \method{tokenize}{character}(x, what = c("word", "sentence", "character",
   "fastestword", "fasterword"), removeNumbers = FALSE, removePunct = FALSE,
-  removeSeparators = TRUE, removeTwitter = FALSE, ngrams = 1,
-  window = 1, concatenator = "_", simplify = FALSE, verbose = FALSE,
+  removeSeparators = TRUE, removeTwitter = FALSE, ngrams = 1L,
+  window = 1L, concatenator = "_", simplify = FALSE, verbose = FALSE,
   ...)
 
 \method{tokenize}{corpus}(x, ...)
 
 is.tokenizedTexts(x)
-
-print.tokenizedTexts(x, ...)
 }
 \arguments{
 \item{x}{The text(s) or corpus to be tokenized}
@@ -81,8 +78,6 @@ a \strong{tokenizedText} (S3) object, essentially a list of character
 Tokenize the texts from a character vector or from a corpus.
 
 \code{is.tokenizedTexts} returns \code{TRUE} if the object is of class tokenizedTexts, \code{FALSE} otherwise.
-
-print method for a \link[tokenize]{tokenizedText} object
 }
 \details{
 The tokenizer is designed to be fast and flexible as well as to
